--- a/.github/workflows/create-hetzner-server.yml
+++ b/.github/workflows/create-hetzner-server.yml
@@ -1,9 +1,9 @@
 name: Create Hetzner Server
-run-name: Create server for ${{ inputs.env_name }} environment
+run-name: Create server for ${{ inputs.environment }} environment
 on:
     workflow_dispatch:
       inputs:
-        env_name:
+        environment:
           description: "Short server name (3–5 letters)"
           required: true
         env_type:
@@ -15,20 +15,20 @@ on:
             - multi-node
     workflow_call:
       inputs:
-        env_name:
+        environment:
           type: string
           description: Environment to deploy to
           required: true
         env_type:
           type: string
           description: Select group tag you want to execute
-          required: true
+          default: 'single-node'
 env:
   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   TF_PATH: infrastructure/provision-server/hetzner-cloud-empty-server
   TF_VAR_hcloud_token: ${{ secrets.HCLOUD_TOKEN }}
   TF_VAR_country_name: ${{ vars.COUNTRY_NAME }}
-  TF_VAR_env_name: ${{ github.event.inputs.env_name }}
+  TF_VAR_environment: ${{ github.event.inputs.environment }}
   TF_VAR_env_type: ${{ github.event.inputs.env_type }}
   TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   TF_VAR_cloudflare_zone_id: ${{ secrets.CLOUDFLARE_ZONE_ID }}
@@ -40,7 +40,7 @@ jobs:
     outputs:
       ssh_host: ${{ steps.output.outputs.ssh_host }}
       hostname: ${{ steps.output.outputs.hostname }}
-    environment: ${{ github.event.inputs.env_name }}
+    environment: ${{ github.event.inputs.environment }}
     steps:
       - name: Checkout repo ${{ github.repository }}
         uses: actions/checkout@v4
@@ -75,8 +75,8 @@ jobs:
       - name: Restore terraform state
         run: |
           mkdir -p terraform-state/${{ vars.COUNTRY_NAME }}
-          [ -f terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate ] && \
-          cp terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate ${{ env.TF_PATH }}/terraform.tfstate || \
+          [ -f terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.environment }}-${{ inputs.env_type }}.tfstate ] && \
+          cp terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.environment }}-${{ inputs.env_type }}.tfstate ${{ env.TF_PATH }}/terraform.tfstate || \
           echo "Terraform state file not found. Creating a new one."
 
       - name: Setup Terraform
@@ -100,16 +100,16 @@ jobs:
           if [ ${{ inputs.env_type }} == 'single-node' ]
           then
             echo "ssh_host=$(terraform output -raw public_ip)" >> $GITHUB_OUTPUT
-            echo "hostname=$TF_VAR_country_name-$TF_VAR_env_name" >> $GITHUB_OUTPUT
+            echo "hostname=$TF_VAR_country_name-$TF_VAR_environment" >> $GITHUB_OUTPUT
           fi
   
       - name: Update terraform state file in ${{ env.TERRAFORM_REPO }}
         run: |
-          cp ${{ env.TF_PATH }}/terraform.tfstate terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate
+          cp ${{ env.TF_PATH }}/terraform.tfstate terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.environment }}-${{ inputs.env_type }}.tfstate
           cd terraform-state/
           if [[ -n "$(git status --porcelain)" ]]; then
-            git add ${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate
-            git commit -m "Add environment file for ${{ github.event.inputs.env_name }} env with type ${{ inputs.env_type }}"
+            git add ${{ vars.COUNTRY_NAME }}/${{ inputs.environment }}-${{ inputs.env_type }}.tfstate
+            git commit -m "Add environment file for ${{ github.event.inputs.environment }} env with type ${{ inputs.env_type }}"
             git push
           else
             echo "No changes to commit"
@@ -121,17 +121,17 @@ jobs:
           HOSTNAME: ${{ steps.output.outputs.hostname }}
           # TODO: Fix hardcoded domain
         run: |
-          [ ! -f infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml ] && \
+          [ ! -f infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml ] && \
           (cat infrastructure/provision-server/templates/single-node-ansible-env.yml | \
           sed -e "s#HOSTNAME#$HOSTNAME#" \
               -e "s#SSH_HOST#$SSH_HOST#" \
-              > infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml && \
-          echo "Environment file created: infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml") || \
-          echo "infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml already exists"
+              > infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml && \
+          echo "Environment file created: infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml") || \
+          echo "infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml already exists"
       - name: Create docker compose
         run: |
-          [ ! -f infrastructure/docker-compose.${{ github.event.inputs.env_name }}-deploy.yml ] && \
-          cp infrastructure/provision-server/templates/docker-compose.single-node.yml infrastructure/docker-compose.${{ github.event.inputs.env_name }}-deploy.yml && \
+          [ ! -f infrastructure/docker-compose.${{ github.event.inputs.environment }}-deploy.yml ] && \
+          cp infrastructure/provision-server/templates/docker-compose.single-node.yml infrastructure/docker-compose.${{ github.event.inputs.environment }}-deploy.yml && \
           echo "Docker-compose created" || \
           echo "Docker-compose already exists"
 
@@ -145,21 +145,21 @@ jobs:
           path=".on.workflow_dispatch.inputs.environment.options"
 
           # Check if option already exists in first workflows file
-          if ! yq e "$path" "$workflows" | grep -qc "${{ github.event.inputs.env_name }}"; then
-            echo "Adding new option '${{ github.event.inputs.env_name }}' to workflows: ${workflows[@]}"
+          if ! yq e "$path" "$workflows" | grep -qc "${{ github.event.inputs.environment }}"; then
+            echo "Adding new option '${{ github.event.inputs.environment }}' to workflows: ${workflows[@]}"
             for workflow in ${workflows[@]}
             do
-              yq e "$path += [\"${{ github.event.inputs.env_name }}\"]" -i "$workflow"
+              yq e "$path += [\"${{ github.event.inputs.environment }}\"]" -i "$workflow"
               echo "Updated workflow $workflow"
             done
           else
-            echo "Option '${{ github.event.inputs.env_name }}' already exists in workflows ${workflows[@]}"
+            echo "Option '${{ github.event.inputs.environment }}' already exists in workflows ${workflows[@]}"
           fi
 
       - env:
           SSH_HOST: ${{ steps.output.outputs.ssh_host }}
           HOSTNAME: ${{ steps.output.outputs.hostname }}
-          DOMAIN: ${{ github.event.inputs.env_name }}.opencrvs.dev
+          DOMAIN: ${{ github.event.inputs.environment }}.opencrvs.dev
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         name: Create environment variables and secrets on GitHub
         run: |
@@ -173,7 +173,7 @@ jobs:
               key=$(echo "$line" | cut -d '=' -f 1)
               value=$(echo "$line" | cut -d '=' -f 2-)
               echo "Adding variable: $key"
-              gh variable set --env ${{ github.event.inputs.env_name }} $key --body "$value"
+              gh variable set --env ${{ github.event.inputs.environment }} $key --body "$value"
             fi
           done < infrastructure/environment.variables
           while read line; do
@@ -181,15 +181,15 @@ jobs:
               key=$(echo "$line" | cut -d '=' -f 1)
               value=$(echo "$line" | cut -d '=' -f 2-)
               echo "Adding secret with value: $key"
-              gh secret set $key --env ${{ github.event.inputs.env_name }} --body "$value"
+              gh secret set $key --env ${{ github.event.inputs.environment }} --body "$value"
             else
               key=$line
               password=`openssl rand -base64 25 | tr -cd '[:alnum:]._-' ; echo ''`
               echo "Adding secret: $key"
-              gh secret set $key --env ${{ github.event.inputs.env_name }} --body "$password"
+              gh secret set $key --env ${{ github.event.inputs.environment }} --body "$password"
             fi
           done < infrastructure/provision-server/templates/environment.secrets.tpl
-          gh secret set SSH_KEY --env ${{ github.event.inputs.env_name }} < $TF_PATH/.ssh/id_rsa || echo "Failed"
+          gh secret set SSH_KEY --env ${{ github.event.inputs.environment }} < $TF_PATH/.ssh/id_rsa || echo "Failed"
       - name: Update known-hosts
         run: |
           echo "Wait few seconds for server to be available" && sleep 10
@@ -197,10 +197,10 @@ jobs:
   
       - name: Commit and push changes to ${{ github.repository }}
         run: |
-          git add infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml \
+          git add infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml \
                   infrastructure/known-hosts \
                   .github \
-                  infrastructure/docker-compose.${{ github.event.inputs.env_name }}-deploy.yml
+                  infrastructure/docker-compose.${{ github.event.inputs.environment }}-deploy.yml
           git status
-          git commit -m "Add environment file for ${{ github.event.inputs.env_name }}"
+          git commit -m "Add environment file for ${{ github.event.inputs.environment }}"
           git push
