--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -46,15 +46,15 @@ jobs:
             - name: Create server ${{ vars.COUNTRY_NAME }}-${{ inputs.release_version }} on Hetzner
               uses: ./.github/actions/run-workflow
               with:
-                # workflow: dummy-create-server.yml
-                workflow: create-hetzner-server.yml
+                workflow: dummy-create-server.yml
+                # workflow: create-hetzner-server.yml
                 args: -f environment=${{ inputs.release_version }}
                 token: ${{ secrets.GH_TOKEN }}
             - name: Run provision server 
               uses: ./.github/actions/run-workflow
               with:
-                workflow: provision.yml
-                # workflow: dummy-provision.yml
+                # workflow: provision.yml
+                workflow: dummy-provision.yml
                 args: -f environment=${{ inputs.release_version }}
                 token: ${{ secrets.GH_TOKEN }}
 
