--- a/.github/actions/run-workflow/action.yml
+++ b/.github/actions/run-workflow/action.yml
@@ -7,6 +7,8 @@ inputs:
     required: true
   token:
     required: true
+  ref:
+    required: false
 runs:
   using: "composite"
   steps:
@@ -16,5 +18,6 @@ runs:
         GH_TOKEN: ${{ inputs.token }}
         WORKFLOW: ${{ inputs.workflow }}
         WORKFLOW_ARGS: ${{ inputs.args }}
+        REF: ${{ inputs.ref }}
       run: ./.github/actions/run-workflow/run.sh
 
