--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -12,9 +12,6 @@ on:
             environment:
                 description: "Environment, e/g v19 will create v19.opencrvs.dev"
                 required: true
-            release_branch:
-                description: "Branch for workflows"
-                required: false
             core_image_tag:
                 description: "Core tag (default: release_branch)"
                 required: false
@@ -40,6 +37,8 @@ jobs:
                 echo "core_tag=${core:-$release}" >> $GITHUB_OUTPUT
                 echo "config_tag=${config:-$release}" >> $GITHUB_OUTPUT
             - name: Fail if not on release branch
+              # TODO: Before MERGE DON'T FORGET
+
               run: |
                 echo "Current ref name: ${{ github.ref_name }}"
                 echo "Current ref: ${{ github.ref }}"
@@ -54,7 +53,6 @@ jobs:
                 # workflow: create-hetzner-server.yml
                 args: -f environment=${{ inputs.environment }}
                 token: ${{ secrets.GH_TOKEN }}
-                ref: ${{ inputs.release_branch }}
             - name: Run provision server 
               uses: ./.github/actions/run-workflow
               with:
@@ -62,7 +60,6 @@ jobs:
                 workflow: dummy-provision.yml
                 args: -f environment=${{ inputs.environment }}
                 token: ${{ secrets.GH_TOKEN }}
-                ref: ${{ inputs.release_branch }}
             - name: Run deployment on ${{ inputs.environment }}
               uses: ./.github/actions/run-workflow
               with:
@@ -72,7 +69,6 @@ jobs:
                   -f core-image-tag=${{ steps.setvars.outputs.core_tag }} \
                   -f countryconfig-image-tag=${{ steps.setvars.outputs.config_tag }}
                 token: ${{ secrets.GH_TOKEN }}
-                ref: ${{ inputs.release_branch }}
             - name: Seeding data to ${{ inputs.environment }}
               uses: ./.github/actions/run-workflow
               with:
@@ -81,4 +77,3 @@ jobs:
                   -f environment=${{ inputs.environment }} \
                   -f core-image-tag=${{ steps.setvars.outputs.core_tag }}
                 token: ${{ secrets.GH_TOKEN }}
-                ref: ${{ inputs.release_branch }}
