--- a/.github/workflows/dummy-create-server.yml
+++ b/.github/workflows/dummy-create-server.yml
@@ -23,3 +23,4 @@ jobs:
             echo ${{ secrets.SMTP_HOST }}
             echo ${{ secrets.SUPER_USER_PASSWORD }}
             echo ${{ vars.ACTIVATE_USERS }}
+            echo "CUSTOM BRANCH: ${{ github.ref_name }}"
