--- a/infrastructure/docker-compose.deploy.yml
+++ b/infrastructure/docker-compose.deploy.yml
@@ -952,6 +952,10 @@ services:
       labels:
         - 'traefik.enable=false'
       replicas: 1
+    depends_on:
+      - mongo1
+      - mongo-on-update:
+          condition: service_completed_successfully
     secrets:
       - jwt-public-key.{{ts}}
     configs:
