--- a/infrastructure/docker-compose.deploy.yml
+++ b/infrastructure/docker-compose.deploy.yml
@@ -916,6 +916,14 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'config'
   migration:
+    depends_on:
+      - mongo1
+      - mongo-on-update:
+          condition: service_completed_successfully
+      - elasticsearch
+      - minio
+      - influxdb
+      - redis
     environment:
       - USER_MGNT_MONGO_URL=mongodb://user-mgnt:${USER_MGNT_MONGODB_PASSWORD}@mongo1/user-mgnt?replicaSet=rs0
       - DASHBOARD_MONGO_URL=mongodb://performance:${PERFORMANCE_MONGODB_PASSWORD}@mongo1/performance?replicaSet=rs0
