--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -18,6 +18,12 @@ on:
                 type: string
 
 jobs:
+    reset:
+      uses: ./.github/workflows/dummy-seed.yml
+      with:
+        environment: ${{ inputs.environment }}
+        core-image-tag: ${{ inputs.core_image_tag }}
+      secrets: inherit
     release-provision-environment:
         runs-on: ubuntu-latest
         environment: ${{ inputs.environment }}
@@ -38,8 +44,8 @@ jobs:
             - name: Create server ${{ vars.COUNTRY_NAME }}-${{ inputs.environment }} on Hetzner
               uses: ./.github/actions/run-workflow
               with:
-                # workflow: dummy-create-server.yml
-                workflow: create-hetzner-server.yml
+                workflow: dummy-create-server.yml
+                # workflow: create-hetzner-server.yml
                 args: -f environment=${{ inputs.environment }}
                 token: ${{ secrets.GH_TOKEN }}
 
@@ -51,15 +57,15 @@ jobs:
             - name: Run provision server 
               uses: ./.github/actions/run-workflow
               with:
-                workflow: provision.yml
-                # workflow: dummy-provision.yml
+                # workflow: provision.yml
+                workflow: dummy-provision.yml
                 args: -f environment=${{ inputs.environment }}
                 token: ${{ secrets.GH_TOKEN }}
             - name: Run deployment on ${{ inputs.environment }}
               uses: ./.github/actions/run-workflow
               with:
-                # workflow: dummy-deploy.yml
-                workflow: deploy.yml
+                workflow: dummy-deploy.yml
+                # workflow: deploy.yml
                 args: |
                   -f environment=${{ inputs.environment }} \
                   -f core-image-tag=${{ inputs.core_image_tag }} \
@@ -68,8 +74,8 @@ jobs:
             - name: Seeding data to ${{ inputs.environment }}
               uses: ./.github/actions/run-workflow
               with:
-                # workflow: dummy-seed.yml
-                workflow: seed-data.yml
+                workflow: dummy-seed.yml
+                # workflow: seed-data.yml
                 args: |
                   -f environment=${{ inputs.environment }} \
                   -f core-image-tag=${{ inputs.core_image_tag }}
