--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -18,7 +18,22 @@ on:
                 type: string
 
 jobs:
-    reset:
+    verify-branch:
+      environment: ${{ inputs.environment }}
+      runs-on: ubuntu-24.04
+      steps:
+      - name: Fail if not on release branch
+        # TODO: Before MERGE DON'T FORGET
+        # Delete condition: [[ "${{ github.ref }}" != refs/heads/ocrvs-9393-uber-pipeline ]]
+        run: |
+          echo "Current ref name: ${{ github.ref_name }} and ref: ${{ github.ref }}"
+          if [[ "${{ github.ref }}" != refs/heads/release/* ]] && [[ "${{ github.ref }}" != refs/heads/ocrvs-9393-uber-pipeline ]]
+          then
+              echo "❌ This workflow must be run from a release/* branch."
+              echo "Please check release documentation for more information: TODO: Add link to documentation"
+              exit 1
+          fi
+    create-server:
       uses: ./.github/workflows/dummy-seed.yml
       with:
         environment: ${{ inputs.environment }}
@@ -28,8 +43,8 @@ jobs:
         runs-on: ubuntu-latest
         environment: ${{ inputs.environment }}
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+            # - name: Checkout repository
+            #   uses: actions/checkout@v4
             - name: Fail if not on release branch
               # TODO: Before MERGE DON'T FORGET
               # Delete condition: [[ "${{ github.ref }}" != refs/heads/ocrvs-9393-uber-pipeline ]]
