--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -34,64 +34,45 @@ jobs:
               exit 1
           fi
     create-server:
-      uses: ./.github/workflows/dummy-seed.yml
+      needs: verify-branch
+      uses: ./.github/workflows/dummy-create-server.yml
+      # uses: ./.github/workflows/create-hetzner-server.yml
+      with:
+        environment: ${{ inputs.environment }}
+      secrets: inherit
+      # steps.get_latest_commit.outputs.config_tag
+    provision-server:
+      needs: [verify-branch, create-server]
+      uses: ./.github/workflows/dummy-provision.yml
+      # uses: ./.github/workflows/provision.yml
+      with:
+        environment: ${{ inputs.environment }}
+      secrets: inherit
+    check-countryconfig:
+      runs-on: ubuntu-24.04
+      needs: [verify-branch, create-server]
+      environment: ${{ inputs.environment }}
+      outputs:
+        image_tag: ${{ steps.get_latest_commit.outputs.config_tag }}
+      steps:
+          - name: Get latest commit SHA
+            id: get_latest_commit
+            run: |
+              git pull
+              echo "config_tag=$(git rev-parse HEAD | cut -c 1-7)" >> $GITHUB_OUTPUT
+    deploy:
+      needs: [verify-branch, provision-server, check-countryconfig]
+      uses: ./.github/workflows/dummy-deploy.yml
+      # uses: ./.github/workflows/deploy.yml
       with:
         environment: ${{ inputs.environment }}
         core-image-tag: ${{ inputs.core_image_tag }}
+        countryconfig-image-tag: "flabla"
       secrets: inherit
-    release-provision-environment:
-        runs-on: ubuntu-latest
+    seed-data:
+      needs: [deploy]
+      uses: ./.github/workflows/dummy-seed.yml
+      # uses: ./.github/workflows/seed-data.yml
+      with:
         environment: ${{ inputs.environment }}
-        steps:
-            # - name: Checkout repository
-            #   uses: actions/checkout@v4
-            - name: Fail if not on release branch
-              # TODO: Before MERGE DON'T FORGET
-              # Delete condition: [[ "${{ github.ref }}" != refs/heads/ocrvs-9393-uber-pipeline ]]
-              run: |
-                echo "Current ref name: ${{ github.ref_name }} and ref: ${{ github.ref }}"
-                if [[ "${{ github.ref }}" != refs/heads/release/* ]] && [[ "${{ github.ref }}" != refs/heads/ocrvs-9393-uber-pipeline ]]
-                then
-                    echo "❌ This workflow must be run from a release/* branch."
-                    echo "Please check release documentation for more information: TODO: Add link to documentation"
-                    exit 1
-                fi
-            - name: Create server ${{ vars.COUNTRY_NAME }}-${{ inputs.environment }} on Hetzner
-              uses: ./.github/actions/run-workflow
-              with:
-                workflow: dummy-create-server.yml
-                # workflow: create-hetzner-server.yml
-                args: -f environment=${{ inputs.environment }}
-                token: ${{ secrets.GH_TOKEN }}
-
-            - name: Get latest commit SHA
-              id: get_latest_commit
-              run: |
-                git pull
-                echo "config_tag=$(git rev-parse HEAD | cut -c 1-7)" >> $GITHUB_OUTPUT
-            - name: Run provision server 
-              uses: ./.github/actions/run-workflow
-              with:
-                # workflow: provision.yml
-                workflow: dummy-provision.yml
-                args: -f environment=${{ inputs.environment }}
-                token: ${{ secrets.GH_TOKEN }}
-            - name: Run deployment on ${{ inputs.environment }}
-              uses: ./.github/actions/run-workflow
-              with:
-                workflow: dummy-deploy.yml
-                # workflow: deploy.yml
-                args: |
-                  -f environment=${{ inputs.environment }} \
-                  -f core-image-tag=${{ inputs.core_image_tag }} \
-                  -f countryconfig-image-tag=${{ steps.get_latest_commit.outputs.config_tag }}
-                token: ${{ secrets.GH_TOKEN }}
-            - name: Seeding data to ${{ inputs.environment }}
-              uses: ./.github/actions/run-workflow
-              with:
-                workflow: dummy-seed.yml
-                # workflow: seed-data.yml
-                args: |
-                  -f environment=${{ inputs.environment }} \
-                  -f core-image-tag=${{ inputs.core_image_tag }}
-                token: ${{ secrets.GH_TOKEN }}
+        core-image-tag: ${{ inputs.core_image_tag }}  
