--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -55,11 +55,11 @@ jobs:
       outputs:
         image_tag: ${{ steps.get_latest_commit.outputs.config_tag }}
       steps:
+          - name: Checkout repo ${{ github.repository }}
+            uses: actions/checkout@v4
           - name: Get latest commit SHA
             id: get_latest_commit
-            run: |
-              git pull
-              echo "config_tag=$(git rev-parse HEAD | cut -c 1-7)" >> $GITHUB_OUTPUT
+            run: echo "config_tag=$(git rev-parse HEAD | cut -c 1-7)" >> $GITHUB_OUTPUT
     deploy:
       needs: [verify-branch, provision-server, check-countryconfig]
       uses: ./.github/workflows/dummy-deploy.yml
