--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -35,16 +35,16 @@ jobs:
           fi
     create-server:
       needs: verify-branch
-      uses: ./.github/workflows/dummy-create-server.yml
-      # uses: ./.github/workflows/create-hetzner-server.yml
+      # uses: ./.github/workflows/dummy-create-server.yml
+      uses: ./.github/workflows/create-hetzner-server.yml
       with:
         environment: ${{ inputs.environment }}
       secrets: inherit
       # steps.get_latest_commit.outputs.config_tag
     provision-server:
       needs: [verify-branch, create-server]
-      uses: ./.github/workflows/dummy-provision.yml
-      # uses: ./.github/workflows/provision.yml
+      # uses: ./.github/workflows/dummy-provision.yml
+      uses: ./.github/workflows/provision.yml
       with:
         environment: ${{ inputs.environment }}
       secrets: inherit
@@ -62,8 +62,8 @@ jobs:
             run: echo "config_tag=$(git rev-parse HEAD | cut -c 1-7)" >> $GITHUB_OUTPUT
     deploy:
       needs: [verify-branch, provision-server, check-countryconfig]
-      uses: ./.github/workflows/dummy-deploy.yml
-      # uses: ./.github/workflows/deploy.yml
+      # uses: ./.github/workflows/dummy-deploy.yml
+      uses: ./.github/workflows/deploy.yml
       with:
         environment: ${{ inputs.environment }}
         core-image-tag: ${{ inputs.core_image_tag }}
@@ -71,8 +71,8 @@ jobs:
       secrets: inherit
     seed-data:
       needs: [deploy]
-      uses: ./.github/workflows/dummy-seed.yml
-      # uses: ./.github/workflows/seed-data.yml
+      # uses: ./.github/workflows/dummy-seed.yml
+      uses: ./.github/workflows/seed-data.yml
       with:
         environment: ${{ inputs.environment }}
         core-image-tag: ${{ inputs.core_image_tag }}  
